# thomasjpfan.github.io

./: .gitignore  .gitlab-ci.yml  404.html  CNAME  Makefile  README.md  authors.html  categories.html  convert_svg.py  develop_server.sh  index.html  main.py  netlify.toml  pelicanconf.py  pelicanhtml_3.tpl  publishconf.py  pyproject.toml  requirements-unbounded.txt  requirements.txt  search.html  sitemap.xml  tasks.py  tipuesearch_content.json
.circleci/: config.yml
.github/workflows/: ci.yml
archives/: index.html
builder/: Dockerfile  requirements.txt
content/: knitpages.R
content/Blog/: 20140104_My_Current_Makefile_For_Cpp.md  201401_My_Current_Makefile_For_Cpp.md  20140502_Maximum_of_damped_free_vibrations.md  201405_Maximum_of_damped_free_vibrations.md  20140704_Hold_On_Tight_Rope.md  20140815_High_Dimensional_Spheres.md  20150813_PCABeforeRegression.md  20150829_PowerCurveCoinFlips.md  20150920_BayesianCoinFlips.md  20151207_FrequentistsAndMCMCMotivation.md  20170805_Hassle_Free_Unets.md  20170828_Rodents_Of_NYC.md  20180731_Nuclei_Image_Segmentation_Tutorial.md  20180912_Survival_Regression_Analysis_on_Customer_Churn.md  20230514_DataFrame_Protocol_Data_Access.md  20230808_Cython_3_NumPy_UFuncs.md  20231227_rustimport_jupyter.md  20250316_torch_graphs.md  20250406_Keep_Warm_Torch_Cache.md  20250413_Torch_Export.md  20250415_Torch_Export.md  20250426_Torch_Export.md  20250511_Six_Years_scikit_learn_Retro.md  (+2 more)
content/R_Blog/: test.md
feeds/: all.atom.xml  blog.atom.xml  thomas-j-fan.atom.xml  thomas-j-fan.rss.xml
plugins/: testing
topics/: index.html
(+90 files in other folders)
